[package]
name = "sef"
version = "0.1.0"
authors = ["Abeeujah <abeeujah@gmail.com>"]
repository = "https://github.com/abeeujah/sef"
description = "A Secure Fountain Architecture for Slashing Storage Costs in Blockchains"
edition = "2024"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
bitcoinkernel = { version = "0.2", optional = true }
bitcoin = { version = "0.32", features = ["std"] }

[features]
default = ["kernel"]
kernel = ["dep:bitcoinkernel"]
